--- a/package.json
+++ b/package.json
@@ -1,6 +1,16 @@
 {
+  "name": "week-8_1",
+  "version": "1.0.0",
   "dependencies": {
     "express": "^4.21.1",
     "mongodb": "^3.6.3"
-  }
+  },
+  "devDependencies": {},
+  "scripts": {
+    "start": "node server1.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
