--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "dependencies": {
     "express": "^4.21.1",
+    "helmet": "^8.0.0",
     "mongodb": "^3.6.3"
   },
-  "devDependencies": {},
   "scripts": {
     "start": "node server1.js",
     "test": "echo \"Error: no test specified\" && exit 1"
