--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "week-8_1",
   "version": "1.0.0",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.21.1",
     "helmet": "^8.0.0",
     "mongodb": "^3.6.3"
@@ -12,5 +13,6 @@
   },
   "author": "",
   "license": "ISC",
+  "main": "server1.js",
   "description": ""
 }
